pyqt5 (5.14.1+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Update debian/watch again, upstream tarballs are now on PyPI.
  * Bump sip build-dependencies to 4.19.20, following configure.py.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 21 Dec 2019 15:25:20 +0300

pyqt5 (5.13.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Update debian/watch for removal of _gpl from tarball names.
  * Drop patches, applied in the new release:
    - python2_qstring.diff
    - remove_deprecated_sip_option.diff
  * Also drop qt_5_12_5.diff, no longer needed.
  * Refresh public_sip.diff.
  * Bump sip build-dependencies to 4.19.19, following configure.py.
  * Stop passing wrong -m option to configure.py.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 12 Dec 2019 10:47:38 +0300

pyqt5 (5.12.3+dfsg-3) unstable; urgency=medium

  [ Ondřej Nový ]
  * Bump Standards-Version to 4.4.1.

  [ Dmitry Shachnev ]
  * Backport upstream change to stop using deprecated -B option of sip.
    This option caused build failure when used together with -f.
  * Use distutils to get Python include directory. Fixes build failure
    with Python 3.8.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 23 Oct 2019 09:46:48 +0300

pyqt5 (5.12.3+dfsg-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Use debhelper-compat instead of debian/compat.
  * Bump Standards-Version to 4.4.0.

  [ Dmitry Shachnev ]
  * Update python2_qstring.diff with the latest changes from upstream.
  * Update Policy URL in the description of public_sip.diff.
  * Add Qt 5.12.5 to the timeline (qt_5_12_5.diff).
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 06 Sep 2019 14:40:10 +0300

pyqt5 (5.12.3+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Refresh debian/patches/public_sip.diff.
  * Backport upstream patch to fix building with Python 2.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 03 Jul 2019 21:22:54 +0300
