@@ -26,8 +26,6 @@ Build-Depends: debhelper-compat (= 11),
                libxslt1-dev,
                python-all-dbg,
                python-all-dev (>= 2.6.6-3~),
-               python-dbus,
-               python-dbus-dbg,
                python-dbus-dev,
                python-sip-dbg,
                python-sip-dev (>= 4.19.20~),
@@ -515,31 +513,6 @@ Description: Python 2 bindings for Qt5 (debug extensions)
  PyQt5 exposes the Qt5 API to Python.
  .
  This package contains the extensions built for the Python 2 debug interpreter.
-
-Package: python-dbus.mainloop.pyqt5
-Architecture: any
-Depends: python-dbus, ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}
-Description: D-Bus Qt main loop support for Python 2
- The dbus.mainloop.pyqt5 module provides support for Qt main loop for
- applications that use dbus-python. By default Qt uses main loop from
- GLib on UNIX-like systems, not its own one.
- .
- This package contains the Python 2 version of this module.
-
-Package: python-dbus.mainloop.pyqt5-dbg
-Architecture: any
-Section: debug
-Depends: python-dbg,
-         python-dbus-dbg,
-         python-dbus.mainloop.pyqt5 (= ${binary:Version}),
-         ${misc:Depends},
-         ${shlibs:Depends}
-Description: D-Bus Qt main loop support for Python 2 (debug extension)
- The dbus.mainloop.pyqt5 module provides support for Qt main loop for
- applications that use dbus-python. By default Qt uses main loop from
- GLib on UNIX-like systems, not its own one.
- .
- This package contains the extension built for the Python 2 debug interpreter.
 
 Package: python-pyqt5.qtopengl
 Architecture: any
