@@ -5,7 +5,6 @@
 export DH_OPTIONS=${EXTRA_DH_OPTIONS}
 
 py3_dbusmoddir = $(shell python3 -c 'import dbus.mainloop; print(dbus.mainloop.__path__[0])')
-py_dbusmoddir = $(shell python -c 'import dbus.mainloop; print(dbus.mainloop.__path__[0])')
 
 CFLAGS=
 CPPFLAGS=
@@ -36,7 +35,7 @@ DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 PYQT_MODULES := opengl sql webchannel webkit websockets xmlpatterns svg \
 	multimedia quick serialport sensors x11extras positioning
 
-PY_PACKAGE_NAMES := pyqt5 $(PYQT_MODULES:%=pyqt5.qt%) dbus.mainloop.pyqt5
+PY_PACKAGE_NAMES := pyqt5 $(PYQT_MODULES:%=pyqt5.qt%)
 
 export QT_SELECT=qt5
 
@@ -63,7 +62,8 @@ build-%/configure-stamp:
 			-d /usr/lib/python$*/dist-packages \
 			--sip-incdir $(call PYTHON_INCDIR, python$*) \
 			--no-sip-files \
-			$(if $(filter $(DEFAULT_PYTHON),$*),,--no-designer-plugin --no-qml-plugin) $(if $(filter 3.%,$*),,--no-tools)
+			$(if $(filter $(DEFAULT_PYTHON),$*),,--no-designer-plugin --no-qml-plugin) \
+			$(if $(filter 3.%,$*),,--no-tools --no-python-dbus)
 	sed -i '/strip/d' build-$*/*/Makefile
 	touch $@
 
@@ -74,6 +74,7 @@ dbg-build-%/configure-stamp:
 	cd dbg-build-$* && python$*-dbg ../configure.py $(SHARED_CONFIGURE_OPTIONS) \
 			-d /usr/lib/python$*/dist-packages \
 			--sip-incdir $(call PYTHON_INCDIR, python$*-dbg) \
+			$(if $(filter 3.%,$*),,--no-python-dbus) \
 			--debug --no-designer-plugin --no-qml-plugin --no-tools --no-sip-files
 	sed -i '/strip/d' dbg-build-$*/*/Makefile
 	sed -i 's/-isystem/-I/' dbg-build-$*/*/Makefile
@@ -206,14 +207,6 @@ install-arch-2.%:
 	$(MAKE) -C build-2.$* install INSTALL_ROOT=$(CURDIR)/debian/tmp DESTDIR=$(CURDIR)/debian/tmp
 	$(MAKE) -C dbg-build-2.$* install INSTALL_ROOT=$(CURDIR)/$(d_qt5_dbg) DESTDIR=$(CURDIR)/$(d_qt5_dbg)
 
-	mkdir -p $(CURDIR)/debian/python-dbus.mainloop.pyqt5/usr/lib/python2.$*/dist-packages/dbus/mainloop; \
-	mv $(CURDIR)/debian/tmp$(py_dbusmoddir)/pyqt5.so \
-	   $(CURDIR)/debian/python-dbus.mainloop.pyqt5/usr/lib/python2.$*/dist-packages/dbus/mainloop; \
-
-	mkdir -p $(CURDIR)/debian/python-dbus.mainloop.pyqt5-dbg/usr/lib/python2.$*/dist-packages/dbus/mainloop; \
-	mv $(CURDIR)/debian/python-pyqt5-dbg$(py_dbusmoddir)/pyqt5.so \
-	   $(CURDIR)/debian/python-dbus.mainloop.pyqt5-dbg/usr/lib/python2.$*/dist-packages/dbus/mainloop; \
-
 	# Don't initiate the uic/widget-plugins
 	touch $(CURDIR)/debian/tmp/usr/lib/python2.$*/dist-packages/PyQt5/uic/widget-plugins/.noinit
 	for module in $(PYQT_MODULES); do \
@@ -274,7 +267,7 @@ binary-common:
 ifeq (,$(findstring -i, $(DH_OPTIONS)))
 	DH_OPTIONS= dh_strip -ppyqt5-dev-tools
 	set -e; \
-	for p in $(PY_PACKAGE_NAMES:%=python3-%) $(PY_PACKAGE_NAMES:%=python-%); do \
+	for p in $(PY_PACKAGE_NAMES:%=python3-%) python3-dbus.mainloop.pyqt5 $(PY_PACKAGE_NAMES:%=python-%); do \
 		DH_OPTIONS= dh_strip -p$$p --dbg-package=$$p-dbg; \
 		rm -rf debian/$$p-dbg/usr/share/doc/$$p-dbg; \
 		mkdir -p debian/$$p-dbg/usr/share/doc; \
@@ -285,7 +278,6 @@ endif
 	rm -rf $(CURDIR)/debian/python-pyqt5/usr/lib/python2.7/dist-packages/PyQt5/uic/port_v3
 	rm -rf $(CURDIR)/debian/python-pyqt5-dbg/usr/bin
 	rm -rf $(CURDIR)/debian/python-pyqt5-dbg/usr/lib/python2.7/dist-packages/PyQt5/uic
-	rm -rf $(CURDIR)/debian/python-pyqt5-dbg/usr/lib/python2.7/dist-packages/dbus
 	dh_python3 --no-dbg-cleaning -N pyqt5-examples
 	rm -rf $(CURDIR)/debian/python3-pyqt5/usr/lib/python3/dist-packages/PyQt5/uic/port_v2
 	rm -rf $(CURDIR)/debian/python3-pyqt5-dbg/usr/bin
